--- a/native/extorch_native/Cargo.toml
+++ b/native/extorch_native/Cargo.toml
@@ -3,6 +3,7 @@ name = "extorch_native"
 version = "0.1.0"
 authors = []
 edition = "2018"
+links = "torch"
 
 [lib]
 name = "extorch_native"
@@ -17,3 +18,6 @@ cxx = "1.0.14"
 
 [build-dependencies]
 cxx-build = "1.0.14"
+
+# [profile.dev]
+# rpath = true
