--- a/native/extorch_native/Cargo.toml
+++ b/native/extorch_native/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["dylib"]
 
 [dependencies]
 rustler = "0.21.1"
+rustler_sys = "2.1.0"
 lazy_static = "1.4.0"
 libc = "0.2.81"
 cxx = "1.0.14"
