--- a/native/extorch_native/src/native/native.rs.in
+++ b/native/extorch_native/src/native/native.rs.in
@@ -1,6 +1,8 @@
 extern crate cxx;
 
 /// Native access to libtorch (C++) functions and namespaces.
+/// NOTE: Any change to this file will be overwitten.
+
 #[cxx::bridge]
 pub mod torch {
     {% include "definitions.rs.in" %}
