--- a/native/extorch_native/Cargo.toml
+++ b/native/extorch_native/Cargo.toml
@@ -15,10 +15,10 @@ rustler = "0.21.1"
 rustler_sys = "2.1.0"
 lazy_static = "1.4.0"
 libc = "0.2.81"
-cxx = "1.0.14"
+cxx = "1.0.42"
 
 [build-dependencies]
-cxx-build = "1.0.14"
+cxx-build = {version = "1.0.42", features = ["parallel"]}
 tera = "1.7.0"
 
 # [profile.dev]
