--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -50,10 +50,10 @@ jobs:
             - name: Build extorch
               shell: bash -l {0}
               run: bash -l .github/scripts/build_extorch.sh
+            - name: Run tests
+              shell: bash -l {0}
+              run: mix test --trace
             # Enable this if SSH debugging is required
-            - name: Setup tmate session
-              if: ${{ failure() }}
-              uses: mxschmitt/action-tmate@v3
-            # - name: Run tests
-            #   shell: bash -l {0}
-            #   run: pytest -v -x syntect/tests
+            # - name: Setup tmate session
+            #   if: ${{ failure() }}
+            #   uses: mxschmitt/action-tmate@v3
