--- a/native/extorch_native/src/native/tensor/info.rs.in
+++ b/native/extorch_native/src/native/tensor/info.rs.in
@@ -10,3 +10,6 @@ fn device(tensor: &SharedPtr<CrossTensor>) -> Device;
 
 /// Get a string representation of a tensor
 fn repr(tensor: &SharedPtr<CrossTensor>) -> String;
+
+/// Convert a tensor into a list
+fn to_list(tensor: &SharedPtr<CrossTensor>) -> ScalarList;
