Update to the latest Rustler version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,5 +65,6 @@
         "valarray": "cpp",
         "variant": "cpp",
         "bitset": "cpp"
-    }
+    },
+    "rust-analyzer.linkedProjects": ["native/extorch/Cargo.toml"]
 }
