Simplify bindings generation

--- a/native/extorch/src/native/definitions.rs.in
+++ b/native/extorch/src/native/definitions.rs.in
@@ -47,16 +47,8 @@ struct Device {
 
 /// Scalar number representation
 struct Scalar {
-    _ui8: u8,
-    _i8: i8,
-    _i16: i16,
-    _i32: i32,
-    _i64: i64,
-    _f16: f32,
-    _f32: f32,
-    _f64: f64,
-    _bool: bool,
-    entry_used: String,
+    _repr: Vec<u8>,
+    entry_used: String
 }
 
 struct ScalarList {
