--- a/native/extorch/src/native/tensor/info.rs.in
+++ b/native/extorch/src/native/tensor/info.rs.in
@@ -1,15 +1,15 @@
 
 /// Get the size of a tensor
-fn size(tensor: &SharedPtr<CrossTensor>) -> &'static [i64];
+fn size(tensor: &SharedPtr<CrossTensor>) -> Result<&'static [i64]>;
 
 /// Get the type of a tensor
-fn dtype(tensor: &SharedPtr<CrossTensor>) -> String;
+fn dtype(tensor: &SharedPtr<CrossTensor>) -> Result<String>;
 
 /// Get the device where the tensor lives on
-fn device(tensor: &SharedPtr<CrossTensor>) -> Device;
+fn device(tensor: &SharedPtr<CrossTensor>) -> Result<Device>;
 
 /// Get a string representation of a tensor
-fn repr(tensor: &SharedPtr<CrossTensor>) -> String;
+fn repr(tensor: &SharedPtr<CrossTensor>) -> Result<String>;
 
 /// Convert a tensor into a list
-fn to_list(tensor: &SharedPtr<CrossTensor>) -> ScalarList;
+fn to_list(tensor: &SharedPtr<CrossTensor>) -> Result<ScalarList>;
