--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -41,15 +41,15 @@ jobs:
               with:
                 otp-version: ${{ matrix.OTP_VERSION }}
                 elixir-version: ${{ matrix.ELIXIR_VERSION }}
-            # - name: Download libtorch binaries
-            #   shell: bash -l {0}
-            #   run: bash -l .github/scripts/download_torch.sh
+            - name: Download libtorch binaries
+              shell: bash -l {0}
+              run: bash -l .github/scripts/download_torch.sh
             - name: Install dependencies
               shell: bash -l {0}
               run: mix deps.get
-            - name: Download libtorch binaries
-              shell: bash -l {0}
-              run: mix pull_lib_torch --version ${{ matrix.PYTORCH_VERSION }}
+            # - name: Download libtorch binaries
+            #   shell: bash -l {0}
+            #   run: mix pull_lib_torch --version ${{ matrix.PYTORCH_VERSION }}
             - name: Build and test extorch
               shell: bash -l {0}
               run: bash -l .github/scripts/test_extorch.sh
