--- a/native/extorch/src/native/tensor/ops.rs.in
+++ b/native/extorch/src/native/tensor/ops.rs.in
@@ -1,6 +1,8 @@
+/// Index a dimension using a sequence of indices (aka advanced indexing)
+fn index(
+    tensor: &SharedPtr<CrossTensor>,
+    indices: Vec<TorchIndex>,
+) -> Result<SharedPtr<CrossTensor>>;
 
 /// Add an empty dimension to a tensor at the given dimension.
-fn unsqueeze(
-    tensor: &SharedPtr<CrossTensor>,
-    dim: i64
-) -> Result<SharedPtr<CrossTensor>>;
+fn unsqueeze(tensor: &SharedPtr<CrossTensor>, dim: i64) -> Result<SharedPtr<CrossTensor>>;
