--- a/native/extorch/Cargo.toml
+++ b/native/extorch/Cargo.toml
@@ -22,3 +22,5 @@ cxx-build = {version = "1.0.97", features = ["parallel"]}
 tera = "1.19.0"
 rustc-hash = "1.1.0"
 glob = "0.3.1"
+prettyplease = "0.2.12"
+syn = "2.0.28"
