Improve print representation, add reshape, requires_grad

--- a/native/extorch/src/native/definitions.rs.in
+++ b/native/extorch/src/native/definitions.rs.in
@@ -70,3 +70,11 @@ struct TorchIndex {
     tensor: SharedPtr<CrossTensor>,
     type_: i64
 }
+
+struct PrintOptions {
+    precision: i64,
+    threshold: f64,
+    edgeitems: i64,
+    linewidth: i64,
+    sci_mode: u8
+}
