--- a/native/extorch/src/native/tensor/creation.rs.in
+++ b/native/extorch/src/native/tensor/creation.rs.in
@@ -157,22 +157,81 @@ fn polar(
 ) -> Result<SharedPtr<CrossTensor>>;
 
 /// Create an empty tensor with the same shape as the input.
-fn empty_like(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
+fn empty_like(
+    input: &SharedPtr<CrossTensor>,
+    s_dtype: String,
+    s_layout: String,
+    s_device: Device,
+    requires_grad: bool,
+    pin_memory: bool,
+    s_mem_fmt: String,
+) -> Result<SharedPtr<CrossTensor>>;
 
 /// Create a tensor filled with random values with the same shape as the input.
-fn rand_like(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
+fn rand_like(
+    input: &SharedPtr<CrossTensor>,
+    s_dtype: String,
+    s_layout: String,
+    s_device: Device,
+    requires_grad: bool,
+    pin_memory: bool,
+    s_mem_fmt: String,
+) -> Result<SharedPtr<CrossTensor>>;
 
 /// Create a tensor filled with random (normal) values with the same shape as the input.
-fn randn_like(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
+fn randn_like(
+    input: &SharedPtr<CrossTensor>,
+    s_dtype: String,
+    s_layout: String,
+    s_device: Device,
+    requires_grad: bool,
+    pin_memory: bool,
+    s_mem_fmt: String,
+) -> Result<SharedPtr<CrossTensor>>;
 
 /// Create a tensor filled with random integers between `low` and `high`
-fn randint_like(input: &SharedPtr<CrossTensor>, low: i64, high: i64) -> Result<SharedPtr<CrossTensor>>;
+fn randint_like(
+    input: &SharedPtr<CrossTensor>,
+    low: i64,
+    high: i64,
+    s_dtype: String,
+    s_layout: String,
+    s_device: Device,
+    requires_grad: bool,
+    pin_memory: bool,
+    s_mem_fmt: String,
+) -> Result<SharedPtr<CrossTensor>>;
 
 /// Create a tensor filled with a scalar with the same shape as the input.
-fn full_like(input: &SharedPtr<CrossTensor>, value: Scalar) -> Result<SharedPtr<CrossTensor>>;
+fn full_like(
+    input: &SharedPtr<CrossTensor>,
+    value: Scalar,
+    s_dtype: String,
+    s_layout: String,
+    s_device: Device,
+    requires_grad: bool,
+    pin_memory: bool,
+    s_mem_fmt: String,
+) -> Result<SharedPtr<CrossTensor>>;
 
 /// Create a tensor filled with zeros with the same shape as the input.
-fn zeros_like(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
+fn zeros_like(
+    input: &SharedPtr<CrossTensor>,
+    s_dtype: String,
+    s_layout: String,
+    s_device: Device,
+    requires_grad: bool,
+    pin_memory: bool,
+    s_mem_fmt: String,
+) -> Result<SharedPtr<CrossTensor>>;
 
 /// Create a tensor filled with ones with the same shape as the input.
-fn ones_like(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
+fn ones_like(
+    input: &SharedPtr<CrossTensor>,
+    s_dtype: String,
+    s_layout: String,
+    s_device: Device,
+    requires_grad: bool,
+    pin_memory: bool,
+    s_mem_fmt: String,
+) -> Result<SharedPtr<CrossTensor>>;
