--- a/native/extorch/src/native/native.rs.in
+++ b/native/extorch/src/native/native.rs.in
@@ -31,6 +31,10 @@ pub mod torch {
         // ----------------------------------------------------------------
         {% include "tensor/pointwise.rs.in" %}
 
+        // Tensor pointwise math operations.
+        // ----------------------------------------------------------------
+        {% include "tensor/mutating.rs.in" %}
+
         // Other tensor operations.
         // ----------------------------------------------------------------
         {% include "tensor/other.rs.in" %}
