--- a/native/extorch/src/native/tensor/ops.rs.in
+++ b/native/extorch/src/native/tensor/ops.rs.in
@@ -16,3 +16,6 @@ fn unsqueeze(tensor: &SharedPtr<CrossTensor>, dim: i64) -> Result<SharedPtr<Cros
 
 /// Rearrange a tensor into a new shape
 fn reshape(tensor: &SharedPtr<CrossTensor>, shape: Vec<i64>) -> Result<SharedPtr<CrossTensor>>;
+
+/// Returns a view of input with a flipped conjugate bit.
+fn conj(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
