--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,8 @@
         "regex": "cpp",
         "shared_mutex": "cpp"
     },
-    "rust-analyzer.linkedProjects": ["native/extorch/Cargo.toml"]
+    "rust-analyzer.linkedProjects": [
+        "native/extorch/Cargo.toml"
+    ],
+    "rust-analyzer.showUnlinkedFileNotification": false
 }
