--- a/native/extorch/src/native/tensor/info.rs.in
+++ b/native/extorch/src/native/tensor/info.rs.in
@@ -17,6 +17,9 @@ fn repr(tensor: &SharedPtr<CrossTensor>, opts: PrintOptions) -> Result<String>;
 /// Convert a tensor into a list
 fn to_list(tensor: &SharedPtr<CrossTensor>) -> Result<ScalarList>;
 
+/// Return the element contained in a tensor with a single element.
+fn item(tensor: &SharedPtr<CrossTensor>) -> Result<Scalar>;
+
 /// Return the total number of elements of a tensor.
 fn numel(tensor: &SharedPtr<CrossTensor>) -> Result<i64>;
 
