--- a/native/extorch/src/native/tensor/comparison.rs.in
+++ b/native/extorch/src/native/tensor/comparison.rs.in
@@ -93,6 +93,9 @@ fn isneginf(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
 /// Check which elements in a tensor are NaN.
 fn isnan(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
 
+/// Check which elements in a tensor are real.
+fn isreal(input: &SharedPtr<CrossTensor>) -> Result<SharedPtr<CrossTensor>>;
+
 /// Check if the values of a given tensor are in another tensor.
 fn isin(
     elements: &SharedPtr<CrossTensor>,
