--- a/native/extorch/src/native/tensor/comparison.rs.in
+++ b/native/extorch/src/native/tensor/comparison.rs.in
@@ -103,3 +103,12 @@ fn isin(
     assume_unique: bool,
     invert: bool,
 ) -> Result<SharedPtr<CrossTensor>>;
+
+/// Find the k-th smallest values of a tensor alongside a dimension.
+fn kthvalue(
+    input: &SharedPtr<CrossTensor>,
+    k: i64,
+    dim: i64,
+    keepdim: bool,
+    out: SortResult,
+) -> Result<SortResult>;
