--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,12 @@
         "bitset": "cpp",
         "csignal": "cpp",
         "regex": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp"
     },
     "rust-analyzer.linkedProjects": [
         "native/extorch/Cargo.toml"
