--- a/native/extorch/src/native/tensor/reduction.rs.in
+++ b/native/extorch/src/native/tensor/reduction.rs.in
@@ -97,3 +97,11 @@ fn mean(
     keepdim: bool,
     out: TensorOut,
 ) -> Result<SharedPtr<CrossTensor>>;
+
+/// Compute the mean (ignoring NaNs) of tensor elements across dimensions.
+fn nanmean(
+    input: &SharedPtr<CrossTensor>,
+    dim: Vec<i64>,
+    keepdim: bool,
+    out: TensorOut,
+) -> Result<SharedPtr<CrossTensor>>;
