--- a/native/extorch/src/native/tensor/reduction.rs.in
+++ b/native/extorch/src/native/tensor/reduction.rs.in
@@ -121,3 +121,11 @@ fn nanmedian(
     keepdim: bool,
     out: TensorTuple,
 ) -> Result<TensorTuple>;
+
+/// Find the mode value of a tensor in the given dimension.
+fn mode(
+    input: &SharedPtr<CrossTensor>,
+    dim: i64,
+    keepdim: bool,
+    out: TensorTuple,
+) -> Result<TensorTuple>;
